<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="account_manage_button">Create Account</string>
    <string name="account_manage_start_up_amount">Start Up Amount</string>
    <string name="account_number_hint">Account Number</string>
    <string name="action_settings">Settings</string>
    <string name="age_hint">Age</string>
    <string name="app_name">Smart Banking</string>
    <string name="btn_do_transaction">Do A Transaction</string>
    <string name="btn_quit">Quit</string>
    <string name="btn_view_accounts">List Accounts</string>
    <string name="cell_number_hint">Cell Number</string>
    <string name="create_account">Create Account!</string>
    <string name="delete_account">Delete Account!</string>
    <string name="deposit_transaction">Deposit</string>
    <string name="email_hint">E-mail</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_text">Login</string>
    <string name="name_hint">Name</string>
    <string name="password_confirm_hint">Confirm</string>
    <string name="password_hint">Password</string>
    <string name="process_transaction_btn">Process!</string>
    <string name="register_text">Register</string>
    <string name="surname_hint">Surname</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_account_list">AccountList</string>
    <string name="title_activity_account_manage">AccountManageActivity</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="title_sample">Title</string>
    <string name="transaction_amount_hint">Amount</string>
    <string name="value_sample">value</string>
    <string name="welcome_label">Smart Banking - ltd</string>
    <string name="withdrawal_transaction">Withdrawal</string>
</resources>
