<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="-1" android:layout_height="-1">
    <RelativeLayout android:layout_width="-1" android:layout_height="-2">
        <EditText android:textSize="25sp" android:textColor="#000000" android:id="@id/firstNameValue" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="20dp" android:hint="@string/name_hint" android:layout_centerHorizontal="true" android:inputType="61" />
        <EditText android:textSize="25sp" android:textColor="#000000" android:id="@id/lastNameValue" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="20dp" android:hint="@string/surname_hint" android:layout_below="@id/firstNameValue" android:layout_centerHorizontal="true" android:inputType="61" />
        <EditText android:textSize="25sp" android:textColor="#000000" android:id="@id/ageValue" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="20dp" android:hint="@string/age_hint" android:width="60dp" android:layout_below="@id/lastNameValue" android:inputType="2" />
        <EditText android:textSize="25sp" android:textColor="#000000" android:id="@id/cellNumberValue" android:layout_width="-1" android:layout_height="-1" android:layout_marginTop="20dp" android:hint="@string/cell_number_hint" android:layout_below="@id/ageValue" android:inputType="2" />
        <EditText android:textSize="25sp" android:textColor="#000000" android:id="@id/emailValue" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="20dp" android:hint="@string/email_hint" android:layout_below="@id/cellNumberValue" android:layout_centerHorizontal="true" android:inputType="21" />
        <EditText android:textSize="25sp" android:textColor="#000000" android:id="@id/passwordValue" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="20dp" android:hint="@string/password_hint" android:layout_below="@id/emailValue" android:layout_centerHorizontal="true" android:inputType="81" />
        <EditText android:textSize="30sp" android:textColor="#000000" android:id="@id/confirmValue" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="20dp" android:hint="@string/password_confirm_hint" android:layout_below="@id/passwordValue" android:layout_centerHorizontal="true" android:inputType="81" />
        <Button android:textSize="25dp" android:textColor="#000000" android:id="@id/userSave" android:layout_width="-1" android:layout_height="-1" android:layout_marginTop="20dp" android:text="@string/register_text" android:layout_below="@id/confirmValue" />
    </RelativeLayout>
</ScrollView>
