<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="-1" android:layout_height="-1">
    <TextView android:textSize="30sp" android:textColor="#ce8f07" android:id="@id/bankLabel" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="20dp" android:text="@string/welcome_label" android:height="60dp" android:layout_centerHorizontal="true" />
    <Button android:id="@id/doTransaction" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="40dp" android:text="@string/btn_do_transaction" android:layout_below="@id/bankLabel" />
    <Button android:id="@id/checkAccounts" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="40dp" android:text="@string/btn_view_accounts" android:layout_below="@id/doTransaction" />
    <Button android:id="@id/accountManage" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="40dp" android:text="@string/account_manage_button" android:layout_below="@id/checkAccounts" />
    <Button android:id="@id/leave" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="90dp" android:text="@string/btn_quit" android:layout_below="@id/accountManage" />
</RelativeLayout>
