<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="-1" android:layout_height="-1">
    <TextView android:textSize="38sp" android:textColor="#ce8f07" android:id="@id/bankLabel" android:layout_width="-2" android:layout_height="-2" android:layout_marginTop="20dp" android:text="@string/welcome_label" android:height="60dp" android:layout_centerHorizontal="true" />
    <EditText android:id="@id/account_manage_account_number" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="80dp" android:hint="@string/account_number_hint" android:layout_below="@id/bankLabel" android:inputType="2" />
    <EditText android:id="@id/startup_account_balance" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="100dp" android:hint="@string/account_manage_start_up_amount" android:layout_below="@id/account_manage_account_number" android:inputType="2002" />
    <Button android:id="@id/account_create" android:layout_width="-1" android:layout_height="-2" android:layout_marginTop="100dp" android:text="@string/create_account" android:layout_below="@id/startup_account_balance" />
</RelativeLayout>
